<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/save"
        android:icon="@android:drawable/ic_menu_save"
        android:showAsAction="ifRoom|withText"
        android:title="@string/save"/>
    <item
        android:id="@+id/virustotal"
        android:icon="@drawable/virustotal"
        android:showAsAction="ifRoom|withText"
        android:title="@string/virustotal"/>
    <item
        android:id="@+id/by_apk_hash"
        android:showAsAction="ifRoom|withText"
        android:title="@string/by_apk_hash"/>
    <item
        android:id="@+id/by_package_name"
        android:showAsAction="ifRoom|withText"
        android:title="@string/by_package_name"/>
    <item
        android:id="@+id/by_signing_certificate"
        android:showAsAction="ifRoom|withText"
        android:title="@string/by_signing_certificate"/>

</menu>